# tera

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  app.css  appveyor.yml  deny.toml  index.html  internals.md  meta.yaml  netlify.toml  robots.txt  sitemap.xml
docs/playground/: Cargo.toml  README.md
docs/playground/pkg/: package.json  playground.d.ts  playground.js  playground_bg.js  playground_bg.wasm  playground_bg.wasm.d.ts
docs/playground/src/: lib.rs
docs/playground/tests/: web.rs
tera/: Cargo.toml
tera-contrib/: Cargo.toml  README.md
tera-contrib/src/: base64.rs  dates.rs  filesize_format.rs  format.rs  urlencode.rs
tera/benches/: escape.rs
tera/src/: args.rs  components.rs  context.rs  delimiters.rs  errors.rs  filters.rs  functions.rs  globbing.rs  lib.rs  reporting.rs  template.rs  tera.rs  tests.rs  utils.rs
tera/src/parsing/: ast.rs  compiler.rs  instructions.rs  lexer.rs  parser.rs
tera/src/snapshot_tests/: compiler.rs  parser.rs  rendering.rs  utils.rs
tera/src/snapshot_tests/build_errors/syntax/: dotted_function_call.txt
tera/src/snapshot_tests/build_errors/validation/: unknown_component_in_component_body.txt
tera/src/snapshot_tests/compiler_inputs/success/: logic_render.txt  short_circuit_path.txt
tera/src/snapshot_tests/lexer_inputs/success/: string_escapes.txt
tera/src/snapshot_tests/parser_inputs/errors/: break_in_component_body.txt  break_in_filter_section.txt  break_in_for_else.txt  component_args_missing_comma.txt  component_body_arg_reserved.txt  component_body_rest_reserved.txt  continue_in_for_else.txt  continue_in_set_block.txt  duplicate_component_argument.txt  duplicate_component_definition.txt  duplicate_kwarg.txt  for_loop_reserved_key.txt  for_loop_reserved_value.txt  kwargs_missing_comma.txt  list_comprehension_in_array.txt  list_comprehension_missing_cond.txt  list_comprehension_missing_in.txt  list_comprehension_multiple_for.txt  nested_kwargs_too_deep.txt  nested_tags_too_deep.txt  postfix_not_before_subscript.txt  postfix_not_before_ternary.txt  ternary_too_deep.txt
tera/src/snapshot_tests/rendering_inputs/errors/: compare_string_with_int.txt  compare_undefined_with_int.txt  filter_section_conversion_error.txt  filter_section_type_error.txt  int_invalid_base.txt  math_on_in_result.txt  math_on_list_literal.txt  math_on_map_literal.txt  modulo_by_zero.txt  range_overflow.txt  set_block_filter_conversion_error.txt  slice_invalid_start.txt  slice_invalid_step.txt  slicing_non_containers.txt  sort_incomparable_types.txt  sort_missing_attribute.txt  super_outside_block.txt  (+3 more)
tera/src/snapshot_tests/snapshots/: tera__snapshot_tests__build_errors__build_errors@mixed_unknown.txt.snap  tera__snapshot_tests__build_errors__build_errors@syntax__dotted_function_call.txt.snap  tera__snapshot_tests__build_errors__build_errors@syntax__invalid_expression.txt.snap  tera__snapshot_tests__build_errors__build_errors@syntax__invalid_tag.txt.snap  tera__snapshot_tests__build_errors__build_errors@syntax__unclosed_component.txt.snap  tera__snapshot_tests__build_errors__build_errors@unknown_component.txt.snap  tera__snapshot_tests__build_errors__build_errors@unknown_include.txt.snap  tera__snapshot_tests__build_errors__build_errors@validation__unknown_across_files.txt.snap  tera__snapshot_tests__build_errors__build_errors@validation__unknown_block_in_child.txt.snap  tera__snapshot_tests__build_errors__build_errors@validation__unknown_component_in_component_body.txt.snap  tera__snapshot_tests__build_errors__build_errors@validation__unknown_filter.txt.snap  tera__snapshot_tests__build_errors__build_errors@validation__unknown_filter_in_component.txt.snap  tera__snapshot_tests__build_errors__build_errors@validation__unknown_function.txt.snap  tera__snapshot_tests__build_errors__build_errors@validation__unknown_test.txt.snap  tera__snapshot_tests__compiler__compiler_ok@logic_render.txt.snap  tera__snapshot_tests__compiler__compiler_ok@short_circuit_path.txt.snap  tera__snapshot_tests__lexer__lexer_ok@raw.txt.snap  tera__snapshot_tests__lexer__lexer_ok@string_escapes.txt.snap  tera__snapshot_tests__parser__parser_components_definition_success@escaped_default.txt.snap  tera__snapshot_tests__parser__parser_components_render_success@render_inline_escaped.txt.snap  tera__snapshot_tests__parser__parser_errors@array_dimensions.txt.snap  tera__snapshot_tests__parser__parser_errors@assign_reserved_keywords.txt.snap  tera__snapshot_tests__parser__parser_errors@block_in_other_tag.txt.snap  tera__snapshot_tests__parser__parser_errors@break_in_component_body.txt.snap  tera__snapshot_tests__parser__parser_errors@break_in_filter_section.txt.snap  tera__snapshot_tests__parser__parser_errors@break_in_for_else.txt.snap  tera__snapshot_tests__parser__parser_errors@component_args_missing_comma.txt.snap  tera__snapshot_tests__parser__parser_errors@component_body_arg_reserved.txt.snap  tera__snapshot_tests__parser__parser_errors@component_body_rest_reserved.txt.snap  tera__snapshot_tests__parser__parser_errors@component_def_in_other_tag.txt.snap  tera__snapshot_tests__parser__parser_errors@component_default_non_literal_in_array.txt.snap  tera__snapshot_tests__parser__parser_errors@component_default_non_literal_in_map.txt.snap  tera__snapshot_tests__parser__parser_errors@component_rest_param_collision.txt.snap  tera__snapshot_tests__parser__parser_errors@continue_in_for_else.txt.snap  tera__snapshot_tests__parser__parser_errors@continue_in_set_block.txt.snap  tera__snapshot_tests__parser__parser_errors@different_end_component_name.txt.snap  tera__snapshot_tests__parser__parser_errors@duplicate_block.txt.snap  tera__snapshot_tests__parser__parser_errors@duplicate_block_nested.txt.snap  tera__snapshot_tests__parser__parser_errors@duplicate_component_argument.txt.snap  tera__snapshot_tests__parser__parser_errors@duplicate_component_definition.txt.snap  (+118 more)
tera/src/value/: de.rs  key.rs  mod.rs  number.rs
tera/src/vm/: for_loop.rs  interpreter.rs  stack.rs  state.rs
tera/tests/: basic.rs  introspection.rs  undefined.rs
(+283 files in other folders)
