[package]
name = "rio-templates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
description = "Template engine for Rio, based on Tera"
homepage = "https://github.com/potamic-co/rio-templates"
repository = "https://github.com/potamic-co/rio-templates"
keywords = ["template", "sql"]
categories = ["template-engine"]
include = ["/src/**/*", "/README.md"]

[dependencies]
globwalk = "0.8.1"
serde = "1.0"
serde_json = "1.0"
pest = "2.5.5"
pest_derive = "2.5.5"
lazy_static = "1.4"
# used in striptags, spaceless & titles filters. Already pulled by globwalk
regex = "1.7"
# used in truncate filter and string iteration
unic-segment = "0.9"

# used in slugify filter
slug = {version = "0.1"}
# used in urlencode filter
percent-encoding = {version = "2.2"}
# used in filesizeformat filter
humansize = {version = "2.1"}
# used in date format filter
chrono = {version = "0.4.27", default-features = false, features = ["std", "clock"]}
# used in date format filter
chrono-tz = {version = "0.8"}
# used in get_random function
rand = {version = "0.8"}

[dev-dependencies]
serde_derive = "1.0"
pretty_assertions = "1"
tempfile = "3"

