[package]
name = "tera-contrib"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Additional filters, functions and tests for the Tera template engine"
repository = "https://github.com/Keats/tera"
documentation = "https://docs.rs/tera-contrib"
keywords = ["template", "jinja2", "tera"]
categories = ["template-engine"]

[dependencies]
tera = { version = "2.0.0-alpha.9", path = "../tera", default-features = false }

base64 = { version = "0.22.1", optional = true }
regex = { version = "1.12.2", optional = true}
slug = {version = "0.1.6", optional = true}
rand = {version = "0.10", optional = true}
jiff = {version = "0.2.18", optional = true}
percent-encoding = {version = "2.3.2", optional = true}
serde_json = {version = "1.0.149", optional = true}
humansize = {version = "2.1.3", optional = true}
formatx = {version = "0.3", optional = true}

[features]
base64 = ["dep:base64"]
date = ["dep:jiff"]
urlencode = ["dep:percent-encoding"]
json = ["dep:serde_json"]
filesize_format = ["dep:humansize"]
format = ["dep:formatx"]
slug = ["dep:slug"]
rand = ["dep:rand"]
regex = ["dep:regex"]

[package.metadata.docs.rs]
features = [
    "base64",
    "date",
    "urlencode",
    "json",
    "filesize_format",
    "format",
    "slug",
    "rand",
    "regex",
]
