[package]
name = "tera"
version = "2.0.0-alpha.9"
edition = "2024"
license = "MIT"
description = "A template engine for Rust based on Jinja2/Django"
repository = "https://github.com/Keats/tera2"
documentation = "https://docs.rs/tera"
readme = "../README.md"
keywords = ["template", "html", "django", "markup", "jinja2"]
categories = ["template-engine"]

[dependencies]
serde = "1"

# Optional deps
indexmap = { version = "2.13.0", optional = true }
unicode-segmentation = { version = "1.12", optional = true }
walkdir = { version = "2.5.0", optional = true }
globset = { version = "0.4.18", optional = true }

# Crates for speedup
ahash = { version = "0.8.12", optional = true }
itoa = { version = "1.0.17", optional = true }
pulldown-cmark-escape = { version = "0.11.0", optional = true}

[features]
default = []
# Use hashbrown with ahash hashing to improve performance
fast_hash = ["dep:ahash", "ahash?/serde"]
# Keep order of insertion for Value
preserve_order = ["dep:indexmap"]
# If we want Tera to work with graphemes clusters rather than utf-8 characters when iterating on strings
unicode = ["dep:unicode-segmentation"]
# Use itoa to format numbers (instead of std::fmt)
no_fmt = ["dep:itoa"]
# Use a faster HTML escape than the default one
fast_escape = ["dep:pulldown-cmark-escape"]
# Improve performance by adding extra dependencies
fast = ["no_fmt", "fast_escape", "fast_hash"]
# Loads files disks using a glob
glob_fs = ["dep:walkdir", "dep:globset"]

[dev-dependencies]
criterion = "0.8"
insta = { version = "1", features = ["glob"] }
serde_derive = "1.0.156"
tempfile = "3"

[package.metadata.docs.rs]
features = [
    "glob_fs",
]

[[bench]]
name = "value"
harness = false

[[bench]]
name = "escape"
harness = false

[[bench]]
name = "templates"
harness = false
